--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@
 *.dylib
 bin
 
+# OLM Bundle
+bundle
+saas-managed-node-metadata-operator-bundle
+
 # Test binary, build with `go test -c`
 *.test
 
