--- a/config/manifests/bases/managed-node-metadata-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/managed-node-metadata-operator.clusterserviceversion.yaml
@@ -10,6 +10,7 @@ metadata:
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
+  customresourcedefinitions: {}
   description: Automatically synchronizes metadata from MachineSets to Nodes
   displayName: Managed Node Metadata Operator
   install:
