CI pipeline fixes
* ignore production when not yet deployed
* use go image freom Red Hat registry
* add pipeline script howto to readme
* remove unused scripts

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,12 @@
 *.dylib
 bin
 
-# OLM Bundle
+.envrc
+
+# OLM Bundle and temp files
 bundle
 saas-managed-node-metadata-operator-bundle
+saasfile.yaml
 
 # Test binary, build with `go test -c`
 *.test
