--- a/config/olm/operatorgroup.yaml
+++ b/config/olm/operatorgroup.yaml
@@ -2,3 +2,5 @@ apiVersion: operators.coreos.com/v1alpha2
 kind: OperatorGroup
 metadata:
   name: ${REPO_NAME}
+targetNamespaces:
+  - openshift-machine-api
