--- a/hack/olm-base-resources/00_olm-resources_generated.yaml
+++ b/hack/olm-base-resources/00_olm-resources_generated.yaml
@@ -18,7 +18,7 @@ spec:
   icon:
     base64data: ""
     mediatype: ""
-  image: ${REGISTRY_IMG}:${CHANNEL}-${IMAGE_TAG}
+  image: ${REGISTRY_IMG}@${IMAGE_DIGEST}
   publisher: Red Hat
   sourceType: grpc
 ---
@@ -38,3 +38,5 @@ kind: OperatorGroup
 metadata:
   name: ${REPO_NAME}
   namespace: ${NAMESPACE}
+targetNamespaces:
+- openshift-machine-api
