--- a/hack/olm-registry/olm-artifacts-template.yaml
+++ b/hack/olm-registry/olm-artifacts-template.yaml
@@ -68,3 +68,5 @@ objects:
       metadata:
         name: ${REPO_NAME}
         namespace: ${NAMESPACE}
+      targetNamespaces:
+      - openshift-machine-api
