--- a/hack/olm-base-resources/00_olm-resources_generated.yaml
+++ b/hack/olm-base-resources/00_olm-resources_generated.yaml
@@ -5,6 +5,15 @@ metadata:
     openshift.io/cluster-monitoring: "true"
   name: ${NAMESPACE}
 ---
+apiVersion: operators.coreos.com/v1
+kind: OperatorGroup
+metadata:
+  name: ${REPO_NAME}
+  namespace: ${NAMESPACE}
+spec:
+  targetNamespaces:
+  - openshift-machine-api
+---
 apiVersion: operators.coreos.com/v1alpha1
 kind: CatalogSource
 metadata:
@@ -32,11 +41,3 @@ spec:
   name: ${REPO_NAME}
   source: ${REPO_NAME}-registry
   sourceNamespace: ${NAMESPACE}
----
-apiVersion: operators.coreos.com/v1alpha2
-kind: OperatorGroup
-metadata:
-  name: ${REPO_NAME}
-  namespace: ${NAMESPACE}
-targetNamespaces:
-- openshift-machine-api
