--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -26,6 +26,18 @@ spec:
     spec:
       securityContext:
         runAsNonRoot: true
+      affinity:
+        nodeAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - preference:
+              matchExpressions:
+              - key: node-role.kubernetes.io/infra
+                operator: Exists
+            weight: 1
+      tolerations:
+        - effect: NoSchedule
+          key: node-role.kubernetes.io/infra
+          operator: Exists
       containers:
       - command:
         - /manager
