--- a/config/manifests/bases/managed-node-metadata-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/managed-node-metadata-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     operators.operatorframework.io/builder: operator-sdk-v1.2.0
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v2
   name: managed-node-metadata-operator.v0.0.0
-  namespace: placeholder
+  namespace: openshift-machine-api
 spec:
   apiservicedefinitions: {}
   customresourcedefinitions: {}
