env var is required by boilerplate
Signed-off-by: Michael Shen <mshen@redhat.com>

--- a/deploy/20_operator.yaml
+++ b/deploy/20_operator.yaml
@@ -35,6 +35,9 @@ spec:
             - --enable-leader-election
           command:
             - /manager
+          env:
+            - name: OPERATOR_NAME
+              value: "managed-node-metadata-operator"
           imagePullPolicy: Always
           resources:
             limits:
