--- a/hack/olm-registry/olm-artifacts-template.yaml
+++ b/hack/olm-registry/olm-artifacts-template.yaml
@@ -42,6 +42,8 @@ objects:
       metadata:
         name: ${REPO_NAME}
         namespace: ${NAMESPACE}
+        annotations:
+          olm.operatorframework.io/exclude-global-namespace-resolution: 'true'
       spec:
         targetNamespaces:
         - openshift-machine-api
