Upgrade operator-sdk to v1.21.0

--- a/deploy/25_operator.yaml
+++ b/deploy/25_operator.yaml
@@ -32,7 +32,7 @@ spec:
         - name: managed-node-metadata-operator
           image: # TODO: Fill me out
           args:
-            - --enable-leader-election
+            - --leader-elect
           command:
             - /manager
           imagePullPolicy: Always
