--- a/deploy/55_prometheus_rolebinding.yaml
+++ b/deploy/55_prometheus_rolebinding.yaml
@@ -1,13 +1,13 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: managed-node-metadata-operator
+  name: prometheus-k8s
   namespace: openshift-managed-node-metadata-operator
 roleRef:
   kind: Role
-  name: managed-node-metadata-operator
+  name: prometheus-k8s
   apiGroup: rbac.authorization.k8s.io
 subjects:
 - kind: ServiceAccount
-  name: managed-node-metadata-operator
-  namespace: openshift-managed-node-metadata-operator
+  name: prometheus-k8s
+  namespace: openshift-monitoring
