--- a/hack/olm-registry/olm-artifacts-template.yaml
+++ b/hack/olm-registry/olm-artifacts-template.yaml
@@ -36,6 +36,9 @@ objects:
       metadata:
         labels:
           openshift.io/cluster-monitoring: 'true'
+          pod-security.kubernetes.io/enforce: 'baseline'
+          pod-security.kubernetes.io/audit: 'baseline'
+          pod-security.kubernetes.io/warn: 'baseline'
         name: ${NAMESPACE}
     - apiVersion: operators.coreos.com/v1
       kind: OperatorGroup
