--- a/osde2e/test-harness-template.yml
+++ b/osde2e/test-harness-template.yml
@@ -3,19 +3,21 @@ apiVersion: template.openshift.io/v1
 kind: Template
 metadata:
   name: osde2e-focused-tests
-labels:
-  template: osde2e-focused-tests
+
 parameters:
   - name: HARNESS_IMAGE_TAG
-    displayName: Test harness image Tag
+    required: true
   - name: OSDE2E_CONFIGS
-    displayName: osde2e Configs
-    description: pre-baked configuration from the osde2e repository
-    value: rosa,stage,test-harness
-  - name: EXTRA_ARGS
-    displayName: Additonal args to supply to osde2e
+    required: true
   - name: TEST_HARNESS_IMAGE
-    displayName: Test Harness Image(s)
+    required: true
+  - name: OCM_TOKEN
+    required: true
+  - name: AWS_ACCESS_KEY_ID
+    required: true    
+  - name: AWS_SECRET_ACCESS_KEY
+    required: true
+  - name: AWS_REGION
     required: true
 objects:
   - apiVersion: batch/v1
@@ -36,7 +38,6 @@ objects:
                 - test
                 - --configs
                 - ${OSDE2E_CONFIGS}
-                - ${EXTRA_ARGS}
               securityContext:
                 runAsNonRoot: true
                 allowPrivilegeEscalation: false
