--- a/.tekton/managed-node-metadata-operator-pko-pull-request.yaml
+++ b/.tekton/managed-node-metadata-operator-pko-pull-request.yaml
@@ -347,26 +347,26 @@ spec:
         operator: in
         values:
         - "false"
-    - name: ecosystem-cert-preflight-checks
-      params:
-      - name: image-url
-        value: $(tasks.build-image-index.results.IMAGE_URL)
-      runAfter:
-      - build-image-index
-      taskRef:
-        params:
-        - name: name
-          value: ecosystem-cert-preflight-checks
-        - name: bundle
-          value: quay.io/konflux-ci/tekton-catalog/task-ecosystem-cert-preflight-checks:0.2@sha256:04f75593558f79a27da2336400bc63d460bf0c5669e3c13f40ee2fb650b1ad1e
-        - name: kind
-          value: task
-        resolver: bundles
-      when:
-      - input: $(params.skip-checks)
-        operator: in
-        values:
-        - "false"
+    # - name: ecosystem-cert-preflight-checks
+    #   params:
+    #   - name: image-url
+    #     value: $(tasks.build-image-index.results.IMAGE_URL)
+    #   runAfter:
+    #   - build-image-index
+    #   taskRef:
+    #     params:
+    #     - name: name
+    #       value: ecosystem-cert-preflight-checks
+    #     - name: bundle
+    #       value: quay.io/konflux-ci/tekton-catalog/task-ecosystem-cert-preflight-checks:0.2@sha256:04f75593558f79a27da2336400bc63d460bf0c5669e3c13f40ee2fb650b1ad1e
+    #     - name: kind
+    #       value: task
+    #     resolver: bundles
+    #   when:
+    #   - input: $(params.skip-checks)
+    #     operator: in
+    #     values:
+    #     - "false"
     - name: sast-snyk-check
       params:
       - name: image-digest
