--- a/.tekton/managed-node-metadata-operator-pko-push.yaml
+++ b/.tekton/managed-node-metadata-operator-pko-push.yaml
@@ -22,8 +22,12 @@ spec:
     value: '{{revision}}'
   - name: output-image
     value: quay.io/redhat-user-workloads/managed-node-metadata-operator-tenant/openshift/pko-package:{{revision}}
+  - name: dockerfile
+    value: build/Dockerfile.pko
+  - name: image-expires-after
+    value: 3d
   - name: path-context
-    value: pko-package
+    value: deploy_pko
   pipelineSpec:
     description: |
       This pipeline is ideal for building container images from a Containerfile while maintaining trust after pipeline customization.
