Use skip-preflight-cert-check for PKO.
the scratch images can not successfully complete that check.

--- a/.tekton/managed-node-metadata-operator-pko-pull-request.yaml
+++ b/.tekton/managed-node-metadata-operator-pko-pull-request.yaml
@@ -29,6 +29,8 @@ spec:
     value: 3d
   - name: path-context
     value: deploy_pko
+  - name: skip-preflight-cert-check
+    value: true
   taskRunTemplate:
     serviceAccountName: build-pipeline-managed-node-metadata-operator-pko
   workspaces:
