--- a/.tekton/managed-node-metadata-operator-pko-push.yaml
+++ b/.tekton/managed-node-metadata-operator-pko-push.yaml
@@ -27,6 +27,8 @@ spec:
     value: build/Dockerfile.pko
   - name: path-context
     value: deploy_pko
+  - name: skip-preflight-cert-check
+    value: true
   taskRunTemplate:
     serviceAccountName: build-pipeline-managed-node-metadata-operator-pko
   workspaces:
